--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "react-hook-form": "^7.66.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
-    "sharp": "0.34.2",
+    "sharp": "0.34.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
@@ -106,6 +106,10 @@
       "sharp",
       "esbuild",
       "unrs-resolver"
-    ]
+    ],
+    "overrides": {
+      "@img/sharp-libvips-darwin-arm64": "1.2.4",
+      "@img/sharp-darwin-arm64>@img/sharp-libvips-darwin-arm64": "1.2.4"
+    }
   }
 }
