--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@payloadcms/db-postgres": "3.64.0",
-    "@payloadcms/live-preview-react": "^3.64.0",
-    "@payloadcms/next": "3.64.0",
-    "@payloadcms/richtext-lexical": "3.64.0",
-    "@payloadcms/ui": "3.64.0",
+    "@payloadcms/db-postgres": "3.62.0",
+    "@payloadcms/live-preview-react": "3.62.0",
+    "@payloadcms/next": "3.62.0",
+    "@payloadcms/richtext-lexical": "3.62.0",
+    "@payloadcms/ui": "3.62.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -62,9 +62,10 @@
     "graphql": "^16.8.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "next": "15.5.6",
     "next-themes": "^0.4.6",
-    "payload": "3.64.0",
+    "payload": "3.62.0",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
