--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.32",
+    "@ai-sdk/groq": "^2.0.29",
+    "@ai-sdk/react": "^2.0.93",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
     "@payloadcms/db-postgres": "3.62.0",
     "@payloadcms/live-preview-react": "3.62.0",
@@ -52,12 +56,13 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "ai": "^5.0.93",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
-    "dotenv": "16.4.7",
     "embla-carousel-react": "^8.6.0",
     "graphql": "^16.8.1",
     "input-otp": "^1.4.2",
@@ -66,13 +71,17 @@
     "next": "15.5.6",
     "next-themes": "^0.4.6",
     "payload": "3.62.0",
+    "pgvector": "^0.2.1",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.6",
+    "react-syntax-highlighter": "^16.1.0",
     "recharts": "2.15.4",
+    "remark-gfm": "^4.0.1",
     "sharp": "0.34.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
@@ -88,12 +97,14 @@
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react": "4.5.2",
+    "dotenv": "16.4.7",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.5.6",
     "jsdom": "26.1.0",
     "playwright": "1.56.1",
     "playwright-core": "1.56.1",
     "prettier": "^3.4.2",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
