--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "cross-env NODE_OPTIONS=\"--no-deprecation --max-old-space-size=8000\" next build --webpack",
-    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev --webpack",
+    "build": "cross-env NODE_OPTIONS=\"--no-deprecation --max-old-space-size=8000\" next build",
+    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
     "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
@@ -23,11 +23,11 @@
     "@ai-sdk/react": "^2.0.93",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
-    "@payloadcms/db-postgres": "3.62.0",
-    "@payloadcms/live-preview-react": "3.62.0",
-    "@payloadcms/next": "3.62.0",
-    "@payloadcms/richtext-lexical": "3.62.0",
-    "@payloadcms/ui": "3.62.0",
+    "@payloadcms/db-postgres": "3.68.2",
+    "@payloadcms/live-preview-react": "3.68.2",
+    "@payloadcms/next": "3.68.2",
+    "@payloadcms/richtext-lexical": "3.68.2",
+    "@payloadcms/ui": "3.68.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -68,9 +68,9 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
-    "next": "16.0.3",
+    "next": "16.1.0-canary.16",
     "next-themes": "^0.4.6",
-    "payload": "3.62.0",
+    "payload": "3.68.2",
     "pgvector": "^0.2.1",
     "postcss": "^8.5.6",
     "react": "19.2.0",
@@ -99,7 +99,7 @@
     "@vitejs/plugin-react": "4.5.2",
     "dotenv": "16.4.7",
     "eslint": "^9.16.0",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "16.1.0-canary.16",
     "jsdom": "26.1.0",
     "playwright": "1.56.1",
     "playwright-core": "1.56.1",
