Implement Better Auth integration and refactor authentication components
- Updated environment configuration in `.env.example` to include Better Auth settings.
- Refactored authentication logic by removing the old Users collection and integrating Better Auth plugin.
- Added new authentication components: SignInForm, SignUpForm, AuthButtons, and UserMenu for improved user experience.
- Created API routes for handling authentication requests.
- Updated navbar to include authentication buttons.
- Enhanced session management and user verification processes.
- Updated payload configuration to support new authentication structure.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
-DATABASE_URI=mongodb://127.0.0.1/your-database-name
-PAYLOAD_SECRET=YOUR_SECRET_HERE
+# Database
+DATABASE_URI=postgresql://username:password@localhost:5432/ai-blog-hub
+
+# Payload CMS
+PAYLOAD_SECRET=your-secret-key-min-32-chars
+PAYLOAD_PREVIEW_SECRET=your-preview-secret
+
+# Better Auth
+BETTER_AUTH_SECRET=your-better-auth-secret-min-32-chars
+NEXT_PUBLIC_BETTER_AUTH_URL=http://localhost:3000
+
+# AI/Embeddings
+GEMINI_API_KEY=your-gemini-api-key
+GROQ_API_KEY=your-groq-api-key
+
+# Optional
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NEXT_PUBLIC_PAYLOAD_URL=http://localhost:3000
