--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ai-sdk/google": "^2.0.32",
     "@ai-sdk/groq": "^2.0.29",
     "@ai-sdk/react": "^2.0.93",
+    "@better-auth/passkey": "^1.4.6",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
     "@payloadcms/db-postgres": "3.68.3",
@@ -58,6 +59,7 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^5.0.93",
+    "better-auth": "^1.4.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -71,6 +73,7 @@
     "next": "16.1.0-canary.16",
     "next-themes": "^0.4.6",
     "payload": "3.68.3",
+    "payload-auth": "1.8.0-canary.2",
     "pgvector": "^0.2.1",
     "postcss": "^8.5.6",
     "react": "19.2.0",
