--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@ai-sdk/react": "^2.0.93",
     "@better-auth/passkey": "^1.4.6",
     "@google/generative-ai": "^0.24.1",
-    "@hookform/resolvers": "^5.2.2",
     "@payloadcms/db-postgres": "3.68.3",
     "@payloadcms/live-preview-react": "3.68.3",
     "@payloadcms/next": "3.68.3",
@@ -57,6 +56,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tailwindcss/postcss": "^4.1.17",
+    "@tanstack/react-form": "^1.27.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^5.0.93",
     "better-auth": "^1.4.6",
@@ -79,7 +79,6 @@
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
-    "react-hook-form": "^7.66.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.6",
     "react-syntax-highlighter": "^16.1.0",
