--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@payloadcms/live-preview-react": "3.68.3",
     "@payloadcms/next": "3.68.3",
     "@payloadcms/richtext-lexical": "3.68.3",
+    "@payloadcms/storage-s3": "^3.68.3",
     "@payloadcms/ui": "3.68.3",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
