Add PostHog analytics integration and update environment configuration
- Added PostHog analytics configuration to `.env.example` and `src/env.ts` for tracking user interactions.
- Created `posthog-events.json` to define various user events for tracking, including sign-up, sign-in, chat interactions, and theme toggling.
- Integrated PostHog tracking in relevant components such as `SignInForm`, `SignUpForm`, `ChatDialog`, and `ModeToggle`.
- Updated `next.config.mjs` to include PostHog reverse proxy settings.
- Added `instrumentation-client.ts` for initializing PostHog in the Next.js application.
- Updated dependencies in `package.json` and `pnpm-lock.yaml` to include PostHog libraries.
- Enhanced user experience by tracking significant events and errors for better analytics insights.

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,10 @@ NEXT_PUBLIC_BETTER_AUTH_URL=http://localhost:3000
 GEMINI_API_KEY=your-gemini-api-key
 GROQ_API_KEY=your-groq-api-key
 
+# PostHog Analytics
+NEXT_PUBLIC_POSTHOG_KEY=your-posthog-key
+NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
+
 # Optional
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_PAYLOAD_URL=http://localhost:3000
