--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "@ai-sdk/react": "^2.0.93",
     "@better-auth/passkey": "^1.4.6",
     "@google/generative-ai": "^0.24.1",
-    "@payloadcms/db-postgres": "3.68.3",
-    "@payloadcms/live-preview-react": "3.68.3",
-    "@payloadcms/next": "3.68.3",
-    "@payloadcms/richtext-lexical": "3.68.3",
-    "@payloadcms/storage-s3": "^3.68.3",
-    "@payloadcms/ui": "3.68.3",
+    "@payloadcms/db-postgres": "3.69.0",
+    "@payloadcms/live-preview-react": "3.69.0",
+    "@payloadcms/next": "3.69.0",
+    "@payloadcms/richtext-lexical": "3.69.0",
+    "@payloadcms/storage-s3": "^3.69.0",
+    "@payloadcms/ui": "3.69.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -71,12 +71,14 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
-    "next": "16.1.0-canary.20",
+    "next": "16.1.1",
     "next-themes": "^0.4.6",
-    "payload": "3.68.3",
+    "payload": "3.69.0",
     "payload-auth": "1.8.0-canary.2",
     "pgvector": "^0.2.1",
     "postcss": "^8.5.6",
+    "posthog-js": "^1.310.1",
+    "posthog-node": "^5.18.0",
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
@@ -102,7 +104,7 @@
     "@vitejs/plugin-react": "4.5.2",
     "dotenv": "16.4.7",
     "eslint": "^9.16.0",
-    "eslint-config-next": "16.1.0-canary.20",
+    "eslint-config-next": "16.1.1",
     "jsdom": "26.1.0",
     "playwright": "1.56.1",
     "playwright-core": "1.56.1",
